--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="card_grey">#1A1A1A</color>
     <color name="text_white">#FFFFFF</color>
     <color name="purple_gradient">#BB86FC</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
-
