--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,47 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#050505"
-    android:padding="20dp">
+    android:background="#050505">
 
+    <!-- SYSTEM STATUS -->
     <TextView
         android:id="@+id/statusLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="JARVIS • SYSTEM ONLINE"
+        android:text="JARVIS • ONLINE"
         android:textColor="#CCFF00"
-        android:letterSpacing="0.1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"/>
+        android:textSize="13sp"
+        android:letterSpacing="0.15"
+        android:fontFamily="sans-serif-medium"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="28dp"/>
 
-    <ImageView
-        android:id="@+id/aiAvatar"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/bg_circle_neon"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"/>
+    <!-- AI ORB CONTAINER -->
+    <FrameLayout
+        android:id="@+id/orbContainer"
+        android:layout_width="260dp"
+        android:layout_height="260dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
+        <!-- GLOW BACK -->
+        <ImageView
+            android:id="@+id/orbGlow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/bg_orb_glow"
+            android:alpha="0.7"/>
+
+        <!-- MAIN ORB -->
+        <ImageView
+            android:id="@+id/orbCore"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:src="@drawable/bg_orb_core"/>
+    </FrameLayout>
+
+    <!-- JARVIS RESPONSE / PROMPT -->
     <TextView
         android:id="@+id/greetingText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Touch mic to initialize"
-        android:textColor="#FFFFFF"
+        android:text="How may I help you today?"
+        android:textColor="#EDEDED"
         android:textSize="18sp"
-        android:layout_below="@id/aiAvatar"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"/>
+        android:gravity="center"
+        android:lineSpacingExtra="6dp"
+        android:fontFamily="sans-serif"
+        app:layout_constraintTop_toBottomOf="@id/orbContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="28dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"/>
 
+    <!-- MIC BUTTON -->
     <ImageButton
         android:id="@+id/btnMic"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/bg_circle_neon"
-        android:src="@android:drawable/ic_btn_speak_now"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"/>
+        android:layout_width="88dp"
+        android:layout_height="88dp"
+        android:background="@drawable/bg_mic_neon"
+        android:src="@drawable/ic_mic"
+        android:tint="#050505"
+        android:contentDescription="Jarvis Mic"
+        android:elevation="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="42dp"/>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
