--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black_background">#050505</color>
-    <color name="neon_green">#CCFF00</color>
-    <color name="card_grey">#1A1A1A</color>
-    <color name="text_white">#FFFFFF</color>
-    <color name="purple_gradient">#BB86FC</color>
-    <color name="white">#FFFFFF</color>
-    <color name="black">#000000</color>
+    <color name="jarvis_bg_dark">#0B121C</color> <color name="jarvis_bg_light">#F5F5F5</color>
+    <color name="jarvis_primary">#00E5FF</color> <color name="jarvis_accent">#FFD700</color>  <color name="jarvis_card">#1A2433</color>
+    <color name="text_glow">#CCFFFFFF</color>
 </resources>
