--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,84 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#050505">
+    android:background="@drawable/bg_main_gradient">
 
-    <!-- SYSTEM STATUS -->
-    <TextView
-        android:id="@+id/statusLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="JARVIS • ONLINE"
-        android:textColor="#CCFF00"
-        android:textSize="13sp"
-        android:letterSpacing="0.15"
-        android:fontFamily="sans-serif-medium"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="28dp"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="#D90B121C"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <!-- AI ORB CONTAINER -->
-    <FrameLayout
-        android:id="@+id/orbContainer"
-        android:layout_width="260dp"
-        android:layout_height="260dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <!-- GLOW BACK -->
         <ImageView
-            android:id="@+id/orbGlow"
+            android:id="@+id/btnMenu"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_menu" 
+            android:layout_marginStart="20dp"
+            app:tint="#80FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="JARVIS"
+            android:textSize="24sp"
+            android:letterSpacing="0.2"
+            android:textStyle="bold"
+            android:textColor="@color/jarvis_primary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="● ONLINE"
+            android:textSize="10sp"
+            android:textColor="#00FF00"
+            app:layout_constraintTop_toBottomOf="@+id/header"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="-25dp"/>
+
+        <ImageView
+            android:id="@+id/btnSettingsTop"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_settings"
+            android:layout_marginEnd="20dp"
+            app:tint="#80FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavContainer">
+        
+        <RelativeLayout
+            android:id="@+id/homeLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/bg_orb_glow"
-            android:alpha="0.7"/>
+            android:gravity="center">
 
-        <!-- MAIN ORB -->
-        <ImageView
-            android:id="@+id/orbCore"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:src="@drawable/bg_orb_core"/>
+            <ImageView
+                android:id="@+id/aiOrb"
+                android:layout_width="220dp"
+                android:layout_height="220dp"
+                android:background="@drawable/bg_orb_ring"
+                android:padding="20dp"/>
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="AI"
+                android:textSize="40sp"
+                android:textStyle="bold"
+                android:textColor="#FFD700"
+                android:layout_centerInParent="true"/>
+
+            <TextView
+                android:id="@+id/txtPrompt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="How may I assist you, sir?"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp"
+                android:layout_below="@id/aiOrb"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="40dp"/>
+        </RelativeLayout>
     </FrameLayout>
 
-    <!-- JARVIS RESPONSE / PROMPT -->
-    <TextView
-        android:id="@+id/greetingText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="How may I help you today?"
-        android:textColor="#EDEDED"
-        android:textSize="18sp"
-        android:gravity="center"
-        android:lineSpacingExtra="6dp"
-        android:fontFamily="sans-serif"
-        app:layout_constraintTop_toBottomOf="@id/orbContainer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="28dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bottomNavContainer"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:background="#0B121C"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-    <!-- MIC BUTTON -->
-    <ImageButton
-        android:id="@+id/btnMic"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
-        android:background="@drawable/bg_mic_neon"
-        android:src="@drawable/ic_mic"
-        android:tint="#050505"
-        android:contentDescription="Jarvis Mic"
-        android:elevation="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="42dp"/>
+        <ImageButton
+            android:id="@+id/btnMic"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/bg_mic_button"
+            android:src="@drawable/ic_mic"
+            app:tint="#00E5FF"
+            android:elevation="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="30dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal"
+            android:weightSum="5"
+            android:gravity="center_vertical"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <ImageView android:id="@+id/navVoice" android:layout_width="0dp" android:layout_height="30dp" android:layout_weight="1" android:src="@drawable/ic_voice" app:tint="#FFD700"/>
+            
+            <ImageView android:id="@+id/navChat" android:layout_width="0dp" android:layout_height="30dp" android:layout_weight="1" android:src="@drawable/ic_chat" app:tint="#60FFFFFF"/>
+
+            <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
+
+            <ImageView android:id="@+id/navData" android:layout_width="0dp" android:layout_height="30dp" android:layout_weight="1" android:src="@drawable/ic_data" app:tint="#60FFFFFF"/>
+
+            <ImageView android:id="@+id/navSettings" android:layout_width="0dp" android:layout_height="30dp" android:layout_weight="1" android:src="@drawable/ic_settings_nav" app:tint="#60FFFFFF"/>
+
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
