--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="jarvis_bg_dark">#0B121C</color> <color name="jarvis_bg_light">#F5F5F5</color>
-    <color name="jarvis_primary">#00E5FF</color> <color name="jarvis_accent">#FFD700</color>  <color name="jarvis_card">#1A2433</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+
+    <color name="neon_green">#00E5FF</color>  <color name="black_background">#0B121C</color> <color name="text_white">#EDEDED</color>
+
+    <color name="jarvis_bg_dark">#0B121C</color>
+    <color name="jarvis_primary">#00E5FF</color>
+    <color name="jarvis_accent">#FFD700</color>
+    <color name="jarvis_card">#1A2433</color>
     <color name="text_glow">#CCFFFFFF</color>
 </resources>
