--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,15 +38,17 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="● ONLINE"
-            android:textSize="10sp"
-            android:textColor="#00FF00"
-            app:layout_constraintTop_toBottomOf="@+id/header"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="-25dp"/>
+    android:id="@+id/statusLabel" 
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="● ONLINE"
+    android:textSize="10sp"
+    android:textColor="#00FF00"
+    app:layout_constraintTop_toBottomOf="@+id/header"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    android:layout_marginTop="-25dp"/>
+
 
         <ImageView
             android:id="@+id/btnSettingsTop"
