--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_main_gradient">
 
+    <!-- Header -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
@@ -25,6 +26,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
+            android:id="@+id/titleJarvis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="JARVIS"
@@ -38,17 +40,16 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
-    android:id="@+id/statusLabel" 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="● ONLINE"
-    android:textSize="10sp"
-    android:textColor="#00FF00"
-    app:layout_constraintTop_toBottomOf="@+id/header"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    android:layout_marginTop="-25dp"/>
-
+            android:id="@+id/statusLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="● ONLINE"
+            android:textSize="10sp"
+            android:textColor="#00FF00"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@id/titleJarvis"
+            app:layout_constraintEnd_toEndOf="@id/titleJarvis"
+            app:layout_constraintStart_toStartOf="@id/titleJarvis"/>
 
         <ImageView
             android:id="@+id/btnSettingsTop"
@@ -62,48 +63,67 @@
             app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <FrameLayout
-        android:id="@+id/fragmentContainer"
+    <!-- Main Content Container -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/mainContent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/header"
         app:layout_constraintBottom_toTopOf="@id/bottomNavContainer">
-        
-        <RelativeLayout
-            android:id="@+id/homeLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
 
-            <ImageView
-                android:id="@+id/aiOrb"
-                android:layout_width="220dp"
-                android:layout_height="220dp"
-                android:background="@drawable/bg_orb_ring"
-                android:padding="20dp"/>
-            
+        <!-- Animated Orb Container -->
+        <FrameLayout
+            android:id="@+id/orbContainer"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="80dp">
+
+            <!-- Animated elements layered -->
+            <View
+                android:id="@+id/orbOuterRing"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/bg_orb_outer_ring"
+                android:layout_gravity="center"/>
+
+            <View
+                android:id="@+id/orbCore"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:background="@drawable/bg_orb_core"
+                android:layout_gravity="center"/>
+
             <TextView
+                android:id="@+id/orbAiText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="AI"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 android:textColor="#FFD700"
-                android:layout_centerInParent="true"/>
+                android:layout_gravity="center"/>
+        </FrameLayout>
 
-            <TextView
-                android:id="@+id/txtPrompt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="How may I assist you, sir?"
-                android:textColor="#FFFFFF"
-                android:textSize="16sp"
-                android:layout_below="@id/aiOrb"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="40dp"/>
-        </RelativeLayout>
-    </FrameLayout>
+        <!-- Animated Text Prompt -->
+        <TextView
+            android:id="@+id/txtPrompt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="How may I assist you, sir?"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            android:letterSpacing="0.05"
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@id/orbContainer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!-- Bottom Navigation -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottomNavContainer"
         android:layout_width="match_parent"
@@ -111,6 +131,7 @@
         android:background="#0B121C"
         app:layout_constraintBottom_toBottomOf="parent">
 
+        <!-- Central Mic Button -->
         <ImageButton
             android:id="@+id/btnMic"
             android:layout_width="70dp"
@@ -118,31 +139,56 @@
             android:background="@drawable/bg_mic_button"
             android:src="@drawable/ic_mic"
             app:tint="#00E5FF"
-            android:elevation="10dp"
+            android:elevation="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginBottom="30dp"/>
 
+        <!-- Navigation Icons -->
         <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/navIcons"
+            android:layout_width="0dp"
             android:layout_height="60dp"
             android:orientation="horizontal"
             android:weightSum="5"
             android:gravity="center_vertical"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:paddingHorizontal="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
-            <ImageView android:id="@+id/navVoice" android:layout_width="0dp" android:layout_height="30dp" android:layout_weight="1" android:src="@drawable/ic_voice" app:tint="#FFD700"/>
+            <ImageView android:id="@+id/navVoice" 
+                android:layout_width="0dp" 
+                android:layout_height="30dp" 
+                android:layout_weight="1" 
+                android:src="@drawable/ic_voice" 
+                app:tint="#FFD700"/>
             
-            <ImageView android:id="@+id/navChat" android:layout_width="0dp" android:layout_height="30dp" android:layout_weight="1" android:src="@drawable/ic_chat" app:tint="#60FFFFFF"/>
+            <ImageView android:id="@+id/navChat" 
+                android:layout_width="0dp" 
+                android:layout_height="30dp" 
+                android:layout_weight="1" 
+                android:src="@drawable/ic_chat" 
+                app:tint="#60FFFFFF"/>
 
-            <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
+            <Space android:layout_width="0dp" 
+                android:layout_height="match_parent" 
+                android:layout_weight="1"/>
 
-            <ImageView android:id="@+id/navData" android:layout_width="0dp" android:layout_height="30dp" android:layout_weight="1" android:src="@drawable/ic_data" app:tint="#60FFFFFF"/>
+            <ImageView android:id="@+id/navData" 
+                android:layout_width="0dp" 
+                android:layout_height="30dp" 
+                android:layout_weight="1" 
+                android:src="@drawable/ic_data" 
+                app:tint="#60FFFFFF"/>
 
-            <ImageView android:id="@+id/navSettings" android:layout_width="0dp" android:layout_height="30dp" android:layout_weight="1" android:src="@drawable/ic_settings_nav" app:tint="#60FFFFFF"/>
-
+            <ImageView android:id="@+id/navSettings" 
+                android:layout_width="0dp" 
+                android:layout_height="30dp" 
+                android:layout_weight="1" 
+                android:src="@drawable/ic_settings_nav" 
+                app:tint="#60FFFFFF"/>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
