--- a/app/src/main/res/drawable/bg_orb_core.xml
+++ b/app/src/main/res/drawable/bg_orb_core.xml
@@ -1,11 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-
-    <solid android:color="#CCFF00" />
-
-    <size
-        android:width="64dp"
-        android:height="64dp" />
-
+    <solid android:color="#2000E5FF"/>
+    <stroke android:width="3dp" android:color="#8000E5FF"/>
 </shape>
