--- a/app/src/main/res/drawable/bg_mic_button.xml
+++ b/app/src/main/res/drawable/bg_mic_button.xml
@@ -1,12 +1,5 @@
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="oval">
-            <solid android:color="#00E5FF"/> <stroke android:width="2dp" android:color="#FFD700"/>
-            <padding android:bottom="5dp" android:top="5dp" android:left="5dp" android:right="5dp"/>
-        </shape>
-    </item>
-    <item android:bottom="4dp" android:top="4dp" android:left="4dp" android:right="4dp">
-        <shape android:shape="oval">
-            <solid android:color="#0B121C"/> </shape>
-    </item>
-</layer-list>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+    <solid android:color="#FF0B121C"/>
+    <stroke android:width="2dp" android:color="#FF00E5FF"/>
+</shape>
